# agent-monitor

./: .gitignore  README.md  install.sh  pyproject.toml
launchd/: com.user.agent-monitor.plist
rust-daemon/: Cargo.toml
rust-daemon/src/: adapters.rs  analytics.rs  api.rs  config.rs  events.rs  integrations.rs  main.rs  models.rs  storage.rs  tui.rs
rust-daemon/src/integration/: mod.rs  shared_types.rs  terminit.rs
src/agent_monitor/: __init__.py  __main__.py  cli.py  config.py  daemon.py
src/agent_monitor/adapters/: __init__.py  aider.py  base.py  claude_code.py  cursor.py  plugin.py
src/agent_monitor/api/: __init__.py
src/agent_monitor/events/: __init__.py  bus.py
src/agent_monitor/ipc/: __init__.py  server.py
src/agent_monitor/models/: __init__.py  enums.py  session.py
src/agent_monitor/storage/: __init__.py  manager.py  schema.sql
src/agent_monitor/tui/: __init__.py  app.py
src/agent_monitor/ui/: __init__.py  cosmic.py
src/agent_monitor/web/: __init__.py  app.py
tests/: __init__.py  test_cli.py  test_config.py  test_models.py  test_storage.py  test_ui_cosmic.py
