[package]
name = "agent-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Bobby Price"]
description = "A daemon for monitoring AI agent sessions"
license = "MIT"
repository = "https://github.com/bobbyprice/agent-monitor"
keywords = ["ai", "agent", "monitoring", "claude", "daemon"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agent-monitor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "6.1"

# Process management
sysinfo = "0.30"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Unix sockets
tokio-stream = { version = "0.1", features = ["sync"] }

# Futures utilities for async streams
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Directories
dirs = "5.0"

# URL decoding
percent-encoding = "2.3"

# HTTP client for webhooks
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
strip = true
